--- a/index.html
+++ b/index.html
@@ -145,20 +145,16 @@
                    <td><a href="http://www.tkuhn.org/" target="_blank"><strong>Tobias Kuhn </strong></a> : <a href="https://github.com/tkuhn/nanopub-server" target="_blank">A Decentralized Approach to Dissemination, Retrieval, and Archiving of Data</a></td>
                  </tr>
                  <tr>
-                   <td>10:45 - 11:55</td>
+                   <td>10:45 - 10:55</td>
                    <td><a href="http://williamdurand.fr/" target="_blank"><strong>William Durand</strong></a> : <a href="https://github.com/TailorDev/manifesto" target="_blank">The Open Science Company Manifesto </a></td>
                  </tr>
 
                  <tr>
-                   <td>11:00 - 11:20</td>
-                   <td>Coffee break</td>
-                 </tr>
-                 <tr>
                    <td>11:20 - 12:30</td>
-                   <td>Un-conference Breakout Session</td>
+                   <td>Discussion and Breakout Session</td>
                  </tr>
                  <tr>
-                   <td>12:30 - 13:00</td>
+                   <td>12:00 - 12:30</td>
                    <td>Presentations from breakout sessions</td>
                  </tr>
                  <tr>
