--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                  </tr>
 
                  <tr>
-                   <td>11:20 - 12:30</td>
+                   <td>10:55 - 12:00</td>
                    <td>Discussion and Breakout Session</td>
                  </tr>
                  <tr>
@@ -263,10 +263,10 @@
 
         <section id="select_contributions">
             <div class="page-header">
-                <h1>Selected Peer-Reviewed Publications</h1>
+                <h1>Journal Publications</h1>
             </div>
-            <p>After the workshop, the organization committee will hand pick and invite peer-reviewed contributions to be published in <a href="http://datasciencehub.net/" target="_blank">Data Science
-        Methods, Infrastructure, and Applications</a> (IOS Press) based on the work submitted.</p>
+            <p>After the workshop, the organization committee will invite selected contributions to submit a paper to be published, after peer review, in <a href="http://datasciencehub.net/" target="_blank">Data Science
+        Methods, Infrastructure, and Applications</a> (IOS Press).</p>
         </section>
 
         <section id="call">
