--- a/index.html
+++ b/index.html
@@ -253,6 +253,28 @@
                       </tbody>
                     </table>
 
+                    <h3>Thomas Landrain</h3>
+
+                    <table class="table">
+                      <tbody>
+
+                          <td  colspan="1" width="230">
+
+                            <div style="width: 205px; height: 137px; overflow: hidden">
+                              <img src="images/landrain.jpeg" alt="Thomas Landrain" style="width:304px;height:228px;">
+
+                            </div>
+
+                          </td>
+                          <td colspan="1">Thomas Landrain is cofounder and president of La Paillasse, the first french and one of the world largest community labs that foster open science and technology. He claims that there is no monopole for great ideas and has been working on re-founding the concept of laboratory for the upcoming era of collective intelligence, fast prototyping and big data within an open framework. He first did a career in academia after graduating from Ecole Normale Superieure and co-founding the first french synthetic biology lab at Genopole where he did his PhD. He is also the co-founder and CEO of the young startup PILI that created the first inks to be biologically synthesised by bacteria. Last but not least, Thomas is a strong advocate of open science and biohacking/DIYbio, travelling the world as a speaker to share his visions and thoughts on the upcoming open biotech revolution.
+                            </td>
+                        </tr>
+
+
+
+                      </tbody>
+                    </table>
+
                       <br><br>
                       <h3>  </h3>
 
@@ -265,8 +287,7 @@
             <div class="page-header">
                 <h1>Journal Publications</h1>
             </div>
-            <p>After the workshop, the organization committee will invite selected contributions to submit a paper to be published, after peer review, in <a href="http://datasciencehub.net/" target="_blank">Data Science
-        Methods, Infrastructure, and Applications</a> (IOS Press).</p>
+            <p>After the workshop, the organization committee will invite selected contributions to submit a paper to be published, after peer review, in the <a href="http://datasciencehub.net/" target="_blank">Data Science</a> journal by IOS Press.</p>
         </section>
 
         <section id="call">
