--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                           <td  colspan="1" width="230">
 
                             <div style="width: 205px; height: 137px; overflow: hidden">
-                              <img src="images/landrain.jpeg" alt="Thomas Landrain" style="width:304px;height:228px;">
+                              <img src="https://raw.githubusercontent.com/OpenScienceSociety/ccs16/gh-pages/images/landrain.jpeg" alt="Thomas Landrain" style="width:304px;height:228px;">
 
                             </div>
 
