--- a/index.html
+++ b/index.html
@@ -164,28 +164,31 @@
                   <td colspan="2"><strong>Afternoon</strong></td>
                  </tr>
                  <tr>
-                  <td>14:45 - 15:00</td>
+                  <td>14:15 - 14:40</td>
                      <td><a href="https://nl.linkedin.com/in/andreozzi" target="_blank"><strong> Sergio Andreozzi </strong></a> : <a href="https://github.com/OpenScienceSociety/Open_Infrastructures" target="_blank"> Commoning Open Infrastructures for Open Science</a>
 
                      </td></td>
                 </tr>
 
                 <tr>
-                  <td>15:00 - 15:10</td>
+                  <td>14:40 - 14:50</td>
                   <td><a href="https://twitter.com/ferminserrano" target="_blank"><strong>Fermin Serrano et al. </strong></a>: <a href="https://github.com/OpenScienceSociety/ibercivis" target="_blank">Overview of Citizen Science Models, Practices and Impacts</a></td>
                 </tr>
                 <tr>
-                  <td>15:10 - 15:20</td>
+                  <td>14:50 - 15:00</td>
                   <td><a href="http://seemantk.com" target="_blank"><strong>Seemant Kullen </strong></a> : <a href="https://github.com/seemantk/gentoo-viz" target="_blank">Herding Cats in Gentoo Linux</a></td>
                 </tr>
                 <tr>
-                  <td>15:20 - 15:30</td>
+                  <td>15:00 - 15:10</td>
                   <td><a href="http://www.ischool.berkeley.edu/people/visitors/thomasmaillart" target="_blank"><strong>Thomas Maillart </strong></a>: <a href="https://github.com/wazaahhh/AstroWeekStudy" target="_blank">Enhancing Online Community Building & Long-Term Production with Co-Located Events</a></td>
                 </tr>
-
                 <tr>
-                  <td>15:30 - 15:40</td>
+                  <td>15:10 - 15:20</td>
                   <td><a href="https://www.linkedin.com/in/iliaselmzouri" target="_blank"><strong>Ilias Elmzouri</strong> : <a href="https://github.com/imi370/Open-Science" target="_blank">Using the Blockchain for Reproducible, Transparent and Trustworthy Science</a></td>
+                </tr>
+                <tr>
+                  <td>15:20 - 15:45</td>
+                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong> : La Paillasse</td>
                 </tr>
 
                 <tr>
