--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
                 </tr>
                 <tr>
                   <td>15:10 - 15:20</td>
-                  <td><a href="https://www.linkedin.com/in/iliaselmzouri" target="_blank"><strong>Ilias Elmzouri</strong> : <a href="https://github.com/imi370/Open-Science" target="_blank">Using the Blockchain for Reproducible, Transparent and Trustworthy Science</a></td>
+                  <td><a href="https://www.linkedin.com/in/iliaselmzouri" target="_blank"><strong>Ilias Elmzouri</strong></a> : <a href="https://github.com/imi370/Open-Science" target="_blank">Using the Blockchain for Reproducible, Transparent and Trustworthy Science</a></td>
                 </tr>
                 <tr>
                   <td>15:20 - 15:45</td>
-                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong> : La Paillasse</td>
+                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong></a> : La Paillasse</td>
                 </tr>
 
                 <tr>
