--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                   <td colspan="2"><strong>Morning</strong></td>
                 </tr>
                 <tr>
-                   <td>9:45 - 10:00</td>
+                   <td>10:00 - 10:15</td>
                    <td>Opening &amp; Participant Introduction</td>
                  </tr>
                  <tr>
-                   <td>10:00 - 10:25</td>
+                   <td>10:15 - 10:40</td>
                    <!--<td>Keynote 1 : Stefan Van Der Walt, <a href="https://bids.berkeley.edu/people/st%C3%A9fan-van-der-walt" target="_blank"> UC Berkeley Institute for Data Science (BIDS)</a></td>
                     -->
                     <td><a href="http://tuvalu.santafe.edu/~simon/" target="_blank"><strong>Simon Dedeo</strong></a>: <a href="https://github.com/OpenScienceSociety/War-is-the-father-of-all-things" target="_blank">War is the father of all things: Creative Destruction on Wikipedia, and Implications for Citizen Science </a>
@@ -136,21 +136,21 @@
 
                  </tr>
                  <tr>
-                   <td>10:25 - 10:35</td>
-                   <td><strong><a href="https://github.com/osagarraOleguer" target="_blank">Oleguer Sagarra et al.  </a></strong>: <a href="https://github.com/OpenScienceSociety/popup" target="_blank">Citizen Science Practices for Computational Social Science Research</a></td>
+                   <td>10:40 - 10:50</td>
+                   <td><strong><a href="https://github.com/osagarraOleguer" target="_blank">Oleguer Sagarra et al.</a></strong>: <a href="https://github.com/OpenScienceSociety/popup" target="_blank">Citizen Science Practices for Computational Social Science Research</a></td>
 
                  </tr>
                  <tr>
-                   <td>10:35 - 10:45</td>
-                   <td><a href="http://www.tkuhn.org/" target="_blank"><strong>Tobias Kuhn </strong></a> : <a href="https://github.com/tkuhn/nanopub-server" target="_blank">A Decentralized Approach to Dissemination, Retrieval, and Archiving of Data</a></td>
+                   <td>10:50 - 11:00</td>
+                   <td><a href="http://www.tkuhn.org/" target="_blank"><strong>Tobias Kuhn</strong></a>: <a href="https://github.com/tkuhn/nanopub-server" target="_blank">A Decentralized Approach to Dissemination, Retrieval, and Archiving of Data</a></td>
                  </tr>
                  <tr>
-                   <td>10:45 - 10:55</td>
-                   <td><a href="http://williamdurand.fr/" target="_blank"><strong>William Durand</strong></a> : <a href="https://github.com/TailorDev/manifesto" target="_blank">The Open Science Company Manifesto </a></td>
+                   <td>11:00 - 11:10</td>
+                   <td><a href="http://williamdurand.fr/" target="_blank"><strong>William Durand</strong></a>: <a href="https://github.com/TailorDev/manifesto" target="_blank">The Open Science Company Manifesto </a></td>
                  </tr>
 
                  <tr>
-                   <td>10:55 - 12:00</td>
+                   <td>11:10 - 12:00</td>
                    <td>Discussion and Breakout Session</td>
                  </tr>
                  <tr>
@@ -165,30 +165,30 @@
                  </tr>
                  <tr>
                   <td>14:15 - 14:40</td>
-                     <td><a href="https://nl.linkedin.com/in/andreozzi" target="_blank"><strong> Sergio Andreozzi </strong></a> : <a href="https://github.com/OpenScienceSociety/Open_Infrastructures" target="_blank"> Commoning Open Infrastructures for Open Science</a>
+                     <td><a href="https://nl.linkedin.com/in/andreozzi" target="_blank"><strong>Sergio Andreozzi</strong></a>: <a href="https://github.com/OpenScienceSociety/Open_Infrastructures" target="_blank"> Commoning Open Infrastructures for Open Science</a>
 
                      </td></td>
                 </tr>
 
                 <tr>
                   <td>14:40 - 14:50</td>
-                  <td><a href="https://twitter.com/ferminserrano" target="_blank"><strong>Fermin Serrano et al. </strong></a>: <a href="https://github.com/OpenScienceSociety/ibercivis" target="_blank">Overview of Citizen Science Models, Practices and Impacts</a></td>
+                  <td><a href="https://twitter.com/ferminserrano" target="_blank"><strong>Fermin Serrano et al.</strong></a>: <a href="https://github.com/OpenScienceSociety/ibercivis" target="_blank">Overview of Citizen Science Models, Practices and Impacts</a></td>
                 </tr>
                 <tr>
                   <td>14:50 - 15:00</td>
-                  <td><a href="http://seemantk.com" target="_blank"><strong>Seemant Kullen </strong></a> : <a href="https://github.com/seemantk/gentoo-viz" target="_blank">Herding Cats in Gentoo Linux</a></td>
+                  <td><a href="http://seemantk.com" target="_blank"><strong>Seemant Kullen</strong></a>: <a href="https://github.com/seemantk/gentoo-viz" target="_blank">Herding Cats in Gentoo Linux</a></td>
                 </tr>
                 <tr>
                   <td>15:00 - 15:10</td>
-                  <td><a href="http://www.ischool.berkeley.edu/people/visitors/thomasmaillart" target="_blank"><strong>Thomas Maillart </strong></a>: <a href="https://github.com/wazaahhh/AstroWeekStudy" target="_blank">Enhancing Online Community Building & Long-Term Production with Co-Located Events</a></td>
+                  <td><a href="http://www.ischool.berkeley.edu/people/visitors/thomasmaillart" target="_blank"><strong>Thomas Maillart</strong></a>: <a href="https://github.com/wazaahhh/AstroWeekStudy" target="_blank">Enhancing Online Community Building & Long-Term Production with Co-Located Events</a></td>
                 </tr>
                 <tr>
                   <td>15:10 - 15:20</td>
-                  <td><a href="https://www.linkedin.com/in/iliaselmzouri" target="_blank"><strong>Ilias Elmzouri</strong></a> : <a href="https://github.com/imi370/Open-Science" target="_blank">Using the Blockchain for Reproducible, Transparent and Trustworthy Science</a></td>
+                  <td><a href="https://www.linkedin.com/in/iliaselmzouri" target="_blank"><strong>Ilias Elmzouri</strong></a>: <a href="https://github.com/imi370/Open-Science" target="_blank">Using the Blockchain for Reproducible, Transparent and Trustworthy Science</a></td>
                 </tr>
                 <tr>
                   <td>15:20 - 15:45</td>
-                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong></a> : La Paillasse</td>
+                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong></a>: <a href="http://lapaillasse.org/" target="_blank">La Paillasse</a></td>
                 </tr>
 
                 <tr>
@@ -215,10 +215,10 @@
 
                 <section id="speakers">
                     <div class="page-header">
-                        <h1>Speakers</h1>
+                        <h1>Invited Speakers</h1>
                     </div>
 
-                    <h3> Simon Dedeo </h3>
+                    <h3>Simon Dedeo</h3>
 
                     <table class="table">
                       <tbody>
