added Thomas Landrain

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </tr>
                 <tr>
                   <td>14:50 - 15:00</td>
-                  <td><a href="http://seemantk.com" target="_blank"><strong>Seemant Kullen</strong></a>: <a href="https://github.com/seemantk/gentoo-viz" target="_blank">Herding Cats in Gentoo Linux</a></td>
+                  <td><a href="http://www.lapaillasse.org" target="_blank"><strong>Thomas Landrain</strong></a>: Exploring the Dark Matter of Science</td>
                 </tr>
                 <tr>
                   <td>15:00 - 15:10</td>
