--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </tr>
                 <tr>
                   <td>15:20 - 15:45</td>
-                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong></a>: <a href="http://lapaillasse.org/" target="_blank">La Paillasse</a></td>
+                  <td><a href="http://lapaillasse.org/" target="_blank"><strong>Thomas Landrain</strong></a>: Exploring the Dark Matter of Science </td>
                 </tr>
 
                 <tr>
