--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                  </tr>
                  <tr>
                   <td>14:15 - 14:40</td>
-                     <td><a href="https://nl.linkedin.com/in/andreozzi" target="_blank"><strong>Sergio Andreozzi</strong></a>: <a href="https://github.com/OpenScienceSociety/Open_Infrastructures" target="_blank">Commoning Open Infrastructures for Open Science</a> <a href="https://raw.githubusercontent.com/OpenScienceSociety/ccs16/gh-pages/slides/CCS2016-OpenSci-Andreozzi.pptx">[Slides]</a>
+                     <td><a href="https://nl.linkedin.com/in/andreozzi" target="_blank"><strong>Sergio Andreozzi</strong></a>: <a href="https://github.com/OpenScienceSociety/Open_Infrastructures" target="_blank">Commoning Open Infrastructures for Open Science</a> <a href="https://raw.githubusercontent.com/OpenScienceSociety/ccs16/gh-pages/slides/CCS2016-OpenSci-Andreozzi.pptx"><strong>[Slides]</strong></a>
 
                      </td></td>
                 </tr>
