--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                  </tr>
                  <tr>
                    <td>10:50 - 11:00</td>
-                   <td><a href="http://www.tkuhn.org/" target="_blank"><strong>Tobias Kuhn</strong></a>: <a href="https://github.com/tkuhn/nanopub-server" target="_blank">A Decentralized Approach to Dissemination, Retrieval, and Archiving of Data</a></td>
+                   <td><a href="http://www.tkuhn.org/" target="_blank"><strong>Tobias Kuhn</strong></a>: <a href="https://github.com/tkuhn/nanopub-server" target="_blank">A Decentralized Approach to Dissemination, Retrieval, and Archiving of Data</a> <a href="http://www.slideshare.net/TobiasKuhn/a-decentralized-approach-to-dissemination-retrieval-and-archiving-of-data"><strong>[Slides]</strong></a></td>
                  </tr>
                  <tr>
                    <td>11:00 - 11:10</td>
